--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="product-value" type="number" min="0" class="form-control text-center" value="1">
+                           <button id="increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5 >$<span id="price">200</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -79,6 +79,9 @@
          </div>
       </div>
    </section>
+
+   <!-- JAVASCRIPT FILE -->
+   <script src="js/case.js"></script>
 </body>
 
 </html>
